# faster_ray_tracing_in_one_weekend

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: aabb.h  bvh.h  hittable.h  hittable_list.h  interval.h  main.cc  qbvh.h  ray.h  rtweekend.h  sphere.h
